Package Java with launcher rather than download it